# dynamic_azure_logger_extension

./: .gitignore  README.md  pyproject.toml
examples/: log_example.py
logger/: __init__.py  _custom_az_log_handler.py  _custom_log_record.py  _custom_logger.py  _level.py  _step.py  azure_logger.py  custom_formatter.py  default_formatters.py  logger.py  trace.py  util.py
